[gd_scene load_steps=5 format=3 uid="uid://dnk8kgoxxgym8"]

[ext_resource type="Script" path="res://global/lever.gd" id="1_5h7jh"]
[ext_resource type="Texture2D" uid="uid://2s13y8x2rb1h" path="res://Sunny-land-files/Graphical Assets/environment/Props/crank-up.png" id="1_5q32q"]
[ext_resource type="AudioStream" uid="uid://dqomdthrwkvkn" path="res://myResources/SFX/clankSoundEffect.mp3" id="2_mjtu4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drahu"]
size = Vector2(25, 18)

[node name="Lever" type="Node2D"]
script = ExtResource("1_5h7jh")

[node name="InteractionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionRange"]
position = Vector2(2.5, -1)
shape = SubResource("RectangleShape2D_drahu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5q32q")

[node name="soundEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_mjtu4")
volume_db = -20.0

[connection signal="body_entered" from="InteractionRange" to="." method="_on_interaction_range_body_entered"]
[connection signal="body_exited" from="InteractionRange" to="." method="_on_interaction_range_body_exited"]
